Feat: configure installer auto-poll in console
